<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">

    <!-- App title -->
    <TextView
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="60dp"
        android:layout_gravity="center"
        android:textSize="28sp"
        android:textStyle="bold"/>

    <Button
        android:text="@string/btnCreateAdvert"
        android:id="@+id/btnCreateAdvert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:text="@string/btnShowItems"
        android:id="@+id/btnShowItems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="280dp"/>

    <Button android:id="@+id/btnClearAll"
        android:text="@string/btnClearAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="#555"
        android:textSize="11sp"
        android:background="@android:color/transparent"
        android:padding="0dp"/>
</LinearLayout>